--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -5,7 +5,7 @@
   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
   text-align: center;
   display: inline-block;
-  color: #fff;
+  color: #ffffff;
   border: 0;
   text-decoration: none;
   cursor: pointer;
