--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -1,4 +1,12 @@
+.ButtonWrapper {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 80px;
+}
+
 .Button {
+  width: 200px;
+  height: 40px;
   padding: 8px 16px;
   border-radius: 2px;
   background-color: #3f51b5;
